fix: removed common letter-spacing, removed useless classes, replaced cover height to gap

--- a/styles/content/common.css
+++ b/styles/content/common.css
@@ -2,5 +2,5 @@
   font-weight: 400;
   /* praktikum +- ok: -0.15px  */
   /* me +- ok: 0.1px */
-  letter-spacing: -0.15px;
+  /* letter-spacing: -0.15px; */
 }
