--- a/styles/content/lots.css
+++ b/styles/content/lots.css
@@ -70,6 +70,7 @@
   position: relative;
   padding: 50px 40px 0;
   font-size: 22px;
+  font-weight: 700;
   text-transform: uppercase;
   text-decoration: underline;
 }
